[package]
name = "sessionizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file = "1.1.2"
fzf-wrapped = "0.1.3"
simple-home-dir = "0.3.2"
tmux_interface = "0.3.2"
yaml-rust = "0.4.5"

[profile.release]
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
debug = false
opt-level = 3
